# main

./: .dockerignore  .gitignore  .lintstagedrc.json  PROJECT_PLAN.md  THE_BRAIN.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json  settings.local.json
apps/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 2026_01_29_1012-8c1d2f1f0a9b_base.py  2026_02_03_1400-a1b2c3d4e5f6_add_product_model.py  2026_02_18_0001-a1b2c3d4e5f6_create_users_and_products_tables.py  2026_02_27_0001-b2c3d4e5f6a7_add_style_clusters_table.py  2026_03_02_0001-c3d4e5f6a7b8_expand_user_model.py  2026_03_23_1014-045c715cd7fc_add_user_interactions_table.py  2026_04_12_0001-d4e5f6a7b8c9_add_user_profile_state_fields.py  2026_04_12_0002-e5f6a7b8c9d0_add_product_categories.py  2026_04_19_0001-f6a7b8c9d0e1_add_archived_at_to_products.py  2026_04_19_0002-a7b8c9d0e1f2_add_exposure_logs_table.py
apps/backend/scripts/: rebuild_clusters.py  run_scraper.py  seed_bootstrap.py
apps/backend/src/: main.py
apps/backend/src/core/: config.py  database.py  dependencies.py  profile_state.py  qdrant.py
apps/backend/src/models/: __init__.py  base.py  cluster.py  exposure_log.py  product.py  user.py  user_interaction.py
apps/backend/tests/core/: test_profile_state.py
apps/backend/tests/features/clustering/: test_cold_start_service.py
apps/backend/tests/features/feed/: test_category_filter.py  test_feed_service.py  test_scoring.py
apps/backend/tests/features/feedback/: test_exposure_service.py  test_profile_update_service.py
(+258 files in other folders)
