[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stylipp-backend"
version = "0.1.0"
description = "Stylipp FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "stylipp-schemas @ file:../../packages/schemas",
  "fastapi[all]",
  "sqlalchemy[asyncio]~=2.0",
  "asyncpg",
  "alembic~=1.13",
  "pydantic-settings",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-multipart",
  "aiofiles",
  "aioboto3~=13.0",
  "qdrant-client~=1.7",
  # ML dependencies for FashionSigLIP embeddings
  "transformers>=4.40.0",
  "torch>=2.0.0",
  "Pillow>=10.0.0",
  "ftfy",
  "open-clip-torch"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest",
  "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
